--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -13,16 +13,13 @@ jobs:
       run:
         working-directory: terraform-projects 
 
+  env: 
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_DEFAULT_REGION: us-east-1
   steps:
     - name: checkout-code
       uses: actions/checkout@v4
-
-    - name: aws cred
-      uses: aws-actions/configure-aws-credentials@v4
-      with: 
-        access_key = ${{ secrets.AWS_ACCESS_KEY_ID }}
-        secret_key = ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
-        region     = "us-east-1"
         
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
