--- a/terraform-projects/01.yaml
+++ b/terraform-projects/01.yaml
@@ -21,8 +21,8 @@ jobs:
 
     - name: vault version
       run: |
-        echo " vault version"   
-        vault -v
+          VAULT_PATH=$(which vault)
+          echo "Vault path: $VAULT_PATH"
          
     - name: Check Vault Health
       run: |
